SAP HANA GET
